feat: add perfect pixel 1920 in page interpreter

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -5,7 +5,7 @@
       <li class="advantages__item">
         <h3 class="advantages__item-title">Возможность 1:</h3>
         <p class="advantages__item-text">
-          Создавайте незабываемые впечатления. Красиво меблированная фотостудия не оставит клиентов равнодушными, а созданная интерьером атмосфера будет надолго запечатлена на их снимках. Стильная и разноплановая обстановка творческого пространства – ключевая составляющая его успешной деятельности. Позаботьтесь о людях в кадре, а мы поможем правильно выбрать мебель.
+          Создавайте незабываемые впечатления. Красиво меблированная фотостудия не оставит клиентов равнодушными, а созданная интерьером атмосфера будет надолго запечатлена на их снимках. Стильная и разноплановая обстановка творческого пространства &ndash;&emsp;ключевая составляющая его успешной деятельности. Позаботьтесь о людях в кадре, а мы поможем правильно выбрать мебель.
         </p>
       </li>
       <li class="advantages__item">
