--- a/src/partials/guarantees.html
+++ b/src/partials/guarantees.html
@@ -4,17 +4,17 @@
     <ol class="list-reset guarantees__list">
       <li class="guarantees__item">
         <p class="guarantees__text">
-          При приемке товара Покупатель должен внимательно проверить его количество, качество и ассортимент на соответствие сопроводительным документам и заказу. После подписания товарного чека Покупатель утрачивает право предъявления претензий, которые можно выявить при приемке товара.
+          При приемке товара Покупатель должен внимательно проверить его количество, <no-typography>качество и ассортимент</no-typography> на соответствие сопроводительным документам и заказу. После подписания товарного чека Покупатель утрачивает право предъявления претензий, которые можно выявить при приемке товара.
         </p>
       </li>
       <li class="guarantees__item">
         <p class="guarantees__text">
-          На товары, сборка которых производилась покупателем самостоятельно (не специалистами Продавца), гарантийные обязательства Продавца не распространяются. Также гарантия не распространяется на повреждения товара, полученные в ходе самостоятельной доставки и подъема товара. Покупатель не вправе отказаться от товара надлежащего качества, имеющего индивидуально-определенные свойства, т.е. если товар может быть использован исключительно приобретающим его потребителем.
+          На товары, сборка которых производилась покупателем самостоятельно (не специалистами Продавца), гарантийные обязательства Продавца не распространяются. Также гарантия <no-typography>не распространяется</no-typography> на повреждения товара, полученные в ходе самостоятельной доставки и подъема товара. Покупатель не вправе отказаться от товара надлежащего качества, имеющего <no-typography>индивидуально-определенные</no-typography> свойства, т.е. если товар может быть использован исключительно приобретающим его потребителем.
         </p>
       </li>
       <li class="guarantees__item">
         <p class="guarantees__text">
-          Возврат или обмен товара возможен при условии, что сохранена упаковка, товарный вид и потребительские свойства товара, а также товарный и кассовый чеки. В этом случае мы гарантируем вам возврат полной стоимости товара (за вычетом стоимости доставки). В случае отказа от товара при доставке, клиент оплачивает услуги доставки.
+          Возврат или обмен товара возможен при условии, что сохранена упаковка, товарный вид <no-typography>и потребительские</no-typography> свойства товара, а также товарный и кассовый чеки. В этом случае мы гарантируем вам возврат полной стоимости товара (за вычетом стоимости доставки). В случае отказа от товара при доставке, клиент оплачивает услуги доставки.
         </p>
       </li>
     </ol>
