--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -397,12 +397,14 @@
     position: relative;
     grid-column: 1/8;
     display: flex;
+    width: 102%;
 
     @include big-desktop {
       & {
         grid-column: 1/7;
         grid-row: 4;
         order: 6;
+        width: 104.8%;
       }
     }
 
@@ -415,6 +417,7 @@
     @include mobile {
       & {
         grid-column: 1/7;
+        width: 100%;
       }
     }
 
@@ -471,12 +474,18 @@
       &:focus + .header__form-search {
         fill: var(--primary-color);
       }
+
+      @include mobile {
+        & {
+          border-radius: 10px;
+        }
+      }
     }
 
     &-btn {
       position: absolute;
       top: 15px;
-      right: 17px;
+      right: 32px;
       width: 32.05px;
       height: 32px;
       border-radius: 100px;
@@ -518,13 +527,13 @@
       @include big-desktop {
         & {
           top: 14px;
-          right: 15px;
+          right: 35px;
         }
       }
 
       @include high-tablet {
         & {
-          right: 13px;
+          right: 33px;
         }
       }
 
@@ -539,8 +548,8 @@
   &__categories {
     grid-column: 8/11;
     position: relative;
-    left: 13px;
-    max-width: 100%;
+    left: 30px;
+    width: 93.5%;
     margin-left: -15px;
     border: 2px solid #F7F7F7;
     border-radius: 0px 10px 10px 0px;
@@ -552,13 +561,14 @@
         grid-row: 4;
         order: 7;
         margin-left: -9px;
-        left: 9px;
+        left: 29px;
       }
     }
 
     @include high-tablet {
       & {
         grid-column: 5/7;
+        width: 90.5%;
       }
     }
 
@@ -567,32 +577,35 @@
         grid-column: 1/7;
         grid-row: 5;
         border-radius: 10px;
+        width: 100%;
+        left: 8px;
       }
     }
 
     & .choices {
       max-width: 100%;
       height: 56px;
+      z-index: 0;
     }
 
     & .choices__list--single {
-      padding: 10px 0 0 42px;
+      padding: 10px 0 0 22px;
 
       @include big-desktop {
         & {
-          padding: 9px 0 0 39px;
+          padding: 9px 0 0 20px;
         }
       }
 
       @include high-tablet {
         & {
-          padding: 9px 0 0 41px;
+          padding: 9px 0 0 21px;
         }
       }
 
       @include mobile {
         & {
-          padding: 9.5px 0 0 23px;
+          padding: 9.5px 0 0 24px;
         }
       }
     }
@@ -634,13 +647,19 @@
 
     & .choices__list--dropdown,
     .choices__list[area-expanded] {
+      opacity: 0;
       top: 100%;
       left: 0;
       max-width: 100%;
       border-radius: 0 0 10px 10px;
       border: 2px solid var(--grey-light-color);
       background-color: var(--white-color);
-      z-index: 2;
+      z-index: -1;
+    }
+
+    & .choices__list--dropdown,
+    .choices__list[area-expanded] .is-active {
+      opacity: 1;
     }
 
     & .choices__list--dropdown .choices__item {
