--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -9,10 +9,22 @@
   &__container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
+
+    @include tablet {
+      & {
+        grid-template-columns: repeat(9, 1fr);
+      }
+    }
   }
 
   &__content {
     grid-column: 1/4;
+
+    @include tablet {
+      & {
+        grid-column: 1/3;
+      }
+    }
   }
 
   &__link {
@@ -85,6 +97,12 @@
   &__nav {
     grid-column: 5/13;
 
+    @include tablet {
+      & {
+        grid-column: 3/10;
+      }
+    }
+
     &-list {
       display: flex;
       justify-content: space-between;
@@ -94,8 +112,21 @@
       margin-top: -2px;
       padding-left: 10px;
 
+      @include tablet {
+        & {
+          padding-left: 7px;
+          padding-right: 2px;
+        }
+      }
+
       &--column2 {
         margin-left: -34px;
+
+        @include tablet {
+          & {
+            margin-left: -32px;
+          }
+        }
       }
 
       &--column3 {
