--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -4,6 +4,12 @@
     padding-top: 24px;
     padding-bottom: 21px;
     background-color: var(--md-grey-color);
+
+    @include high-tablet {
+      & {
+        padding-bottom: 24px;
+      }
+    }
   }
 
   &__container {
@@ -13,6 +19,12 @@
     @include tablet {
       & {
         grid-template-columns: repeat(9, 1fr);
+      }
+    }
+
+    @include high-tablet {
+      & {
+        grid-template-columns: repeat(6, 1fr);
       }
     }
   }
@@ -25,6 +37,15 @@
         grid-column: 1/3;
       }
     }
+
+    @include high-tablet {
+      & {
+        grid-column: 1/7;
+        margin-bottom: 30px;
+        display: flex;
+        justify-content: space-between;
+      }
+    }
   }
 
   &__link {
@@ -33,6 +54,13 @@
     margin-left: -2px;
     margin-bottom: 26px;
     border: 2px solid transparent;
+
+    @include high-tablet {
+      & {
+        margin-bottom: 0;
+        padding-top: 2px;
+      }
+    }
 
     &:focus-visible:not(:hover):not(:active) {
       border-color: var(--primary-color);
@@ -103,9 +131,22 @@
       }
     }
 
+    @include high-tablet {
+      & {
+        grid-column: 1/7;
+      }
+    }
+
     &-list {
       display: flex;
       justify-content: space-between;
+
+      @include mobile {
+        & {
+          display: grid;
+          grid-template-columns: repeat(6, 1fr);
+        }
+      }
     }
 
     &-item {
@@ -119,6 +160,21 @@
         }
       }
 
+      @include high-tablet {
+        & {
+          margin-top: -12px;
+          padding: 0 2px 0 0;
+        }
+      }
+
+      &--column1 {
+        @include mobile {
+          & {
+            grid-column: 1/4;
+          }
+        }
+      }
+
       &--column2 {
         margin-left: -34px;
 
@@ -127,10 +183,30 @@
             margin-left: -32px;
           }
         }
+
+        @include mobile {
+          & {
+            grid-column: 4/7;
+          }
+        }
       }
 
       &--column3 {
         margin-left: -15px;
+
+        @include mobile {
+          & {
+            grid-column: 1/4;
+          }
+        }
+      }
+
+      &--column4 {
+        @include mobile {
+          & {
+            grid-column: 4/7;
+          }
+        }
       }
     }
 
