--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -46,6 +46,14 @@
         justify-content: space-between;
       }
     }
+
+    @include mobile {
+      & {
+        margin-bottom: 19.5px;
+        flex-direction: column;
+        align-items: center;
+      }
+    }
   }
 
   &__link {
@@ -59,6 +67,13 @@
       & {
         margin-bottom: 0;
         padding-top: 2px;
+      }
+    }
+
+    @include mobile {
+      & {
+        margin-bottom: 19px;
+        padding: 0.5px 0 0 1px;
       }
     }
 
@@ -171,6 +186,7 @@
         @include mobile {
           & {
             grid-column: 1/4;
+            margin: 0;
           }
         }
       }
@@ -187,6 +203,7 @@
         @include mobile {
           & {
             grid-column: 4/7;
+            margin: 0 0 0 9px;
           }
         }
       }
@@ -197,6 +214,7 @@
         @include mobile {
           & {
             grid-column: 1/4;
+            padding: 34px 0 0 14px;
           }
         }
       }
@@ -205,6 +223,7 @@
         @include mobile {
           & {
             grid-column: 4/7;
+            padding: 33.5px 0 0 8px;
           }
         }
       }
