fix: bug hover, focus-visible all project

--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -5,9 +5,9 @@
       <li class="categories__card-item categories__card-item--sofas">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list">
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Прямые</a></li>
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Угловые</a></li>
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Модульные</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Прямые</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Угловые</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Модульные</a></li>
           </ul>
           <h3 class="categories__card-content-title">Диваны</h3>
           <picture class="categories__card-content-picture categories__card-content-picture--sofas">
@@ -37,8 +37,8 @@
       <li class="categories__card-item categories__card-item--chairs categories__card-item--all">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list categories__card-content-list--2-5">
-            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5" tabindex="-1">Мягкие</a></li>
-            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5" tabindex="-1">Кресла-кровати</a></li>
+            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5">Мягкие</a></li>
+            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5">Кресла-кровати</a></li>
           </ul>
           <h3 class="categories__card-content-title categories__card-content-title--2-5">Кресла</h3>
           <picture class="categories__card-content-picture categories__card-content-picture--chairs categories__card-content-picture--2-5">
@@ -71,8 +71,8 @@
       <li class="categories__card-item categories__card-item--beds categories__card-item--all">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list categories__card-content-list--2-5">
-            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5" tabindex="-1">Односпальные</a></li>
-            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5" tabindex="-1">Двуспальные</a></li>
+            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5">Односпальные</a></li>
+            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5">Двуспальные</a></li>
           </ul>
           <h3 class="categories__card-content-title categories__card-content-title--2-5">Кровати</h3>
           <picture class="categories__card-content-picture categories__card-content-picture--beds categories__card-content-picture--2-5">
@@ -108,8 +108,8 @@
       <li class="categories__card-item categories__card-item--curbstones categories__card-item--all">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list categories__card-content-list--2-5">
-            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5" tabindex="-1">Тумбы</a></li>
-            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5" tabindex="-1">Комоды</a></li>
+            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5">Тумбы</a></li>
+            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5">Комоды</a></li>
           </ul>
           <h3 class="categories__card-content-title categories__card-content-title--2-5 categories__card-content-title--curbstones">Тумбы и комоды</h3>
           <picture class="categories__card-content-picture categories__card-content-picture--curbstones categories__card-content-picture--2-5">
@@ -142,8 +142,8 @@
       <li class="categories__card-item categories__card-item--seat categories__card-item--all">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list categories__card-content-list--2-5 ">
-            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5" tabindex="-1">Деревянные</a></li>
-            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5" tabindex="-1">Металлокаркас</a></li>
+            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5">Деревянные</a></li>
+            <li class="categories__card-content-item categories__card-content-item--2-5"><a href="#no-scrolling" class="categories__card-content-item-link categories__card-content-item-link--2-5">Металлокаркас</a></li>
           </ul>
           <h3 class="categories__card-content-title categories__card-content-title--2-5">Стулья</h3>
           <picture class="categories__card-content-picture categories__card-content-picture--seat categories__card-content-picture--2-5">
