--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -62,6 +62,7 @@
     margin-left: -2px;
     margin-bottom: 26px;
     border: 2px solid transparent;
+    transition: border .3s ease-in-out;
 
     @include high-tablet {
       & {
