--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -348,6 +348,11 @@
 
   &__link-logo {
     grid-column: 1/3;
+    margin-top: -2px;
+    margin-left: -2px;
+    border: 2px solid transparent;
+    transition: border .3s ease-in-out;
+
 
     @include big-desktop {
       & {
@@ -372,6 +377,10 @@
           padding: 12px 1px 0 0;
         }
       }
+    }
+
+    &:focus-visible:not(:hover):not(:active) {
+      border-color: var(--primary-color);
     }
   }
 
