feat: add adaptive in page interpreter

--- a/src/partials/guarantees.html
+++ b/src/partials/guarantees.html
@@ -9,12 +9,12 @@
       </li>
       <li class="guarantees__item">
         <p class="guarantees__text">
-          На товары, сборка которых производилась покупателем самостоятельно (не специалистами Продавца), гарантийные обязательства Продавца не распространяются. Также гарантия <no-typography>не распространяется</no-typography> на повреждения товара, полученные в ходе самостоятельной доставки и подъема товара. Покупатель не вправе отказаться от товара надлежащего качества, имеющего <no-typography>индивидуально-определенные</no-typography> свойства, т.е. если товар может быть использован исключительно приобретающим его потребителем.
+          На товары, сборка которых производилась покупателем самостоятельно (не специалистами Продавца), гарантийные обязательства Продавца <no-typography>не распространяются</no-typography>. Также гарантия <no-typography>не распространяется</no-typography> на повреждения товара, полученные в ходе самостоятельной доставки и подъема товара. Покупатель не вправе отказаться от товара надлежащего качества, имеющего <no-typography>индивидуально-определенные свойства, т.е.</no-typography> если товар может быть использован исключительно приобретающим его потребителем.
         </p>
       </li>
       <li class="guarantees__item">
         <p class="guarantees__text">
-          Возврат или обмен товара возможен при условии, что сохранена упаковка, товарный вид <no-typography>и потребительские</no-typography> свойства товара, а также товарный и кассовый чеки. В этом случае мы гарантируем вам возврат полной стоимости товара (за вычетом стоимости доставки). В случае отказа от товара при доставке, клиент оплачивает услуги доставки.
+          Возврат или обмен товара возможен при условии, что сохранена упаковка, товарный вид <no-typography>и потребительские</no-typography> свойства товара, а также товарный <no-typography>и кассовый</no-typography> чеки. В этом случае <no-typography>мы гарантируем</no-typography> вам возврат полной стоимости товара (за вычетом стоимости доставки). В случае отказа <no-typography>от товара</no-typography> при доставке, клиент оплачивает услуги доставки.
         </p>
       </li>
     </ol>
