--- a/src/partials/profit.html
+++ b/src/partials/profit.html
@@ -6,7 +6,7 @@
         <li class="profit__item">
           <img loading="lazy" src="img/network.svg" class="profit__item-img" width="25" height="25" alt="Фоновое изображение">
           <p class="profit__text">
-            Мы ценим идеи и вдохновение и предлагаем сотрудничество талантливым дизайнерам и архитекторам. Выпускаемая нами продукция гармонично дополнит любой современный проект.
+            Мы ценим идеи и вдохновение и предлагаем сотрудничество талантливым дизайнерам <no-typography>и</no-typography> архитекторам. Выпускаемая нами продукция гармонично дополнит любой современный проект.
           </p>
         </li>
         <li class="profit__item">
