--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -6,6 +6,14 @@
     font-size: 24px;
     line-height: 33px;
     color: var(--night-rider-color);
+
+    @include mobile {
+      & {
+        margin-bottom: 11.5px;
+        font-size: 14px;
+        line-height: 19px;
+      }
+    }
   }
 
   &__list {
@@ -16,18 +24,36 @@
   &__item {
     margin-bottom: 12px;
 
+    @include mobile {
+      & {
+        margin-bottom: 9.5px;
+      }
+    }
+
     &-title {
       margin-bottom: 13px;
       font-weight: 600;
       font-size: 16px;
       line-height: 22px;
       color: var(--secondary-color);
+
+      @include mobile {
+        & {
+          margin-bottom: 12.1px;
+        }
+      }
     }
 
     &-text {
       font-size: 16px;
       line-height: 180%;
       color: var(--grey-shade-color);
+
+      @include mobile {
+        & {
+          font-size: 14px;
+        }
+      }
     }
   }
 }
