--- a/src/partials/suppliers.html
+++ b/src/partials/suppliers.html
@@ -4,7 +4,7 @@
     <div class="suppliers__content">
       <h2 class="suppliers__subtitle">Поставщикам</h2>
       <p class="suppliers__text">
-        При планировании обстановки торгового помещения важно обустроить его с комфортом для покупателей: грамотно зонировать, обеспечить эффективную демонстрацию и хранение товаров в зале. Если вам необходимо комплексное оснащение, организация зоны отдыха или отдельные предметы меблировки для поддержания эффективной торговой деятельности, мы поможем выбрать продукцию с учетом нагрузки от поступающего трафика.
+        При планировании обстановки торгового помещения важно обустроить его <no-typography>с комфортом</no-typography> для покупателей: грамотно зонировать, обеспечить эффективную демонстрацию и хранение товаров в зале. Если вам необходимо комплексное оснащение, организация зоны отдыха или отдельные предметы меблировки для поддержания эффективной торговой деятельности, мы поможем выбрать продукцию с учетом нагрузки <no-typography>от поступающего</no-typography> трафика.
       </p>
     </div>
   </div>
