--- a/src/scss/components/_guarantees.scss
+++ b/src/scss/components/_guarantees.scss
@@ -7,12 +7,32 @@
     font-size: 24px;
     line-height: 33px;
     color: var(--night-rider-color);
+
+    @include mobile {
+      & {
+        margin-top: -2px;
+        font-size: 16px;
+        line-height: 22px;
+      }
+    }
   }
 
   &__list {
     margin-bottom: 32px;
     max-width: 840px;
     counter-reset: numbering;
+
+    @include small-tablet {
+      & {
+        margin-bottom: 33px;
+      }
+    }
+
+    @include mobile {
+      & {
+        margin-bottom: 30px;
+      }
+    }
   }
 
   &__item {
@@ -32,6 +52,12 @@
 
     &:not(:last-child) {
       margin-bottom: 13px;
+
+      @include mobile {
+        & {
+          margin-bottom: 9px;
+        }
+      }
     }
   }
 
@@ -39,6 +65,12 @@
     font-size: 16px;
     line-height: 180%;
     color: var(--grey-shade-color);
+
+    @include mobile {
+      & {
+        font-size: 14px;
+      }
+    }
   }
 
   &__wrapper {
@@ -48,12 +80,27 @@
 
     &-image {
       margin-right: 32px;
+
+      @include mobile {
+        & {
+          margin-right: 16px;
+          width: 36px;
+          height: 54px;
+        }
+      }
     }
 
     &-text {
       font-size: 24px;
       line-height: 150%;
       color: var(--night-rider-color);
+
+      @include mobile {
+        & {
+          max-width: 190px;
+          font-size: 16px;
+        }
+      }
     }
   }
 }
