feat: add page contacts

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -48,7 +48,7 @@
           <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Шоу-рум</a></li>
           <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Доставка и оплата</a></li>
           <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Дисконт</a></li>
-          <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Контакты</a></li>
+          <li class="header__nav-item"><a href="contacts.html" class="header__nav-link" data-menu-item data-scroll>Контакты</a></li>
         </ul>
 
         <svg class="header__nav-img">
