--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -48,7 +48,7 @@
             <h3 class="footer__nav-title">Связь с нами</h3>
             <ul class="list-reset footer__menu-list">
               <li class="footer__menu-item"><a href="#no-scrolling" class="footer__menu-link">Обратная связь</a></li>
-              <li class="footer__menu-item"><a href="#no-scrolling" class="footer__menu-link">Контакты</a></li>
+              <li class="footer__menu-item"><a href="contacts.html" class="footer__menu-link">Контакты</a></li>
             </ul>
           </li>
           <li class="footer__nav-item footer__nav-item--column4">
