--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
           </select>
         </div>
       </div>
-      <a href="tel:+74958854547" class="header__phone-link">
+      <a   class="header__phone-link">
         <svg class="header__phone-img">
           <use xlink:href="img/sprite.svg#phone"></use>
         </svg>
