--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./components/tooltip";
 @import "./components/burger";
 @import "./components/card";
+@import "./components/map";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/special";
@@ -26,4 +27,5 @@
 @import "./components/profit";
 @import "./components/advantages";
 @import "./components/guarantees";
+@import "./components/contacts";
 
