fix: bug grid page contacts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,10 +1,12 @@
 <section class="contacts">
   <div class="container contancts__container">
     <h1 class="section-title contacts__title">Контакты</h1>
-    <form action="#" class="contacts__form">
-      <input class="contacts__form-input" id="search-input" type="text" placeholder="Поиск магазина">
-      <button class="btn-all btn-reset contacts__form-btn">Поиск</button>
-    </form>
-    <div class="contacts__form-map" id="map"></div>
+    <div class="contacts__wrapper">
+      <form action="#" class="contacts__form">
+        <input class="contacts__form-input" id="search-input" type="text" placeholder="Поиск магазина">
+        <button class="btn-all btn-reset contacts__form-btn">Поиск</button>
+      </form>
+      <div class="contacts__form-map" id="map"></div>
+    </div>
   </div>
 </section>
