--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -32,6 +32,12 @@
       }
     }
 
+    @include mobile {
+      & {
+        grid-column: 1/7;
+      }
+    }
+
     &-input {
       margin-right: 32px;
       width: 624px;
@@ -75,6 +81,14 @@
       @include high-tablet {
         & {
           width: 64%;
+        }
+      }
+
+      @include mobile {
+        & {
+          margin-bottom: 16px;
+          width: 100%;
+          height: 54px;
         }
       }
     }
@@ -163,6 +177,12 @@
       @include tablet {
         & {
           grid-column: 1/10;
+        }
+      }
+
+      @include mobile {
+        & {
+          grid-column: 1/7;
         }
       }
     }
