feat: add checkboxes furnitures filter in page catalog

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,4 +28,6 @@
 @import "./components/advantages";
 @import "./components/guarantees";
 @import "./components/contacts";
+@import "./components/catalog";
+@import "./components/furnitures";
 
