--- a/src/scss/components/_furnitures.scss
+++ b/src/scss/components/_furnitures.scss
@@ -17,6 +17,7 @@
       line-height: 130%;
       color: var(--grey-shade-color);
     }
+  }
 
     .furniture {
       margin-bottom: 11px;
@@ -25,6 +26,18 @@
       line-height: 130%;
       color: var(--grey-shade-color);
       cursor: pointer;
+      outline: none;
+      transition: color .3s ease-in-out;
+
+      @include hover {
+        +& {
+          color: var(--primary-color);
+        }
+      }
+
+      &:active {
+        color: var(--primary-shade-color);
+      }
 
       &__input {
         position: absolute;
@@ -35,6 +48,25 @@
         z-index: 2;
         opacity: 0;
         cursor: pointer;
+
+        // &::before {
+        //   content: '';
+        //   position: absolute;
+        //   top: 0;
+        //   right: 0;
+        //   bottom: 0;
+        //   left: 0;
+        //   width: 100%;
+        //   height: 100%;
+        //   border: 2px solid var(--primary-color);
+        //   transform: translate(0, 0) scaleX(0);
+        //   transform-origin: center;
+        //   transition: transform .3s ease-in-out;
+        // }
+
+        // &:focus-visible::before {
+        //   transform: translate(0, 0) scaleX(1);
+        // }
       }
 
       &__span {
@@ -50,7 +82,13 @@
           height: 20px;
           border: 1px solid var(--grey-color);
           border-radius: 2px;
-          transition: .3s ease-in-out;
+          transition: border-color .3s ease-in-out;
+        }
+
+        @include hover {
+          +&::before {
+            border-color: var(--primary-color);
+          }
         }
 
         &::after {
@@ -64,7 +102,7 @@
           border-bottom: 2px solid var(--white-color);
           opacity: 0;
           transform: rotate(45deg);
-          transition: .3s ease-in-out;
+          transition: all .3s ease-in-out;
         }
       }
 
@@ -82,12 +120,64 @@
     & .furniture__input:checked + .furniture__span::after {
       opacity: 1;
     }
-  }
 
   &__btn {
+    position: relative;
     font-size: 16px;
     line-height: 130%;
     color: var(--primary-color);
+    transition: color .3s ease-in-out;
+
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: -3px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: var(--primary-color);
+      transform: translate(0, 0) scaleX(0);
+      transform-origin: center;
+      transition: transform .3s ease-in-out, background-color .3s ease-in-out;
+    }
+
+    @include hover {
+      +&::before {
+        transform: translate(0, 0) scaleX(1);
+      }
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: -2px;
+      right: 0;
+      bottom: 0;
+      left: -3px;
+      width: calc(100% + 6px);
+      height: calc(100% + 4px);
+      background-color: var(--primary-light-color);
+      transform: translate(0, 0) scaleX(0);
+      transform-origin: center;
+      transition: transform .3s ease-in-out;
+      z-index: -1;
+    }
+
+    &:focus-visible:not(:hover):not(:active)::after {
+      transform: translate(0, 0) scaleX(1);
+    }
+
+    &:focus-visible:not(:hover):not(:active) {
+      color: var(--white-color);
+    }
+
+    &:active {
+      color: var(--primary-shade-color);
+    }
+
+    &:active::before {
+      background-color: var(--primary-shade-color);
+    }
   }
 }
 
