feat: add price filter in page catalog

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -3,7 +3,8 @@
     <div class="catalog__content">
       <div class="catalog__left">
         <h2 class="catalog__left-title">Фильтровать по:</h2>
-        @include('furnitures.html')
+        @include('catalogFurnitures.html')
+        @include('catalogPrice.html')
       </div>
       <div class="catalog__right"></div>
     </div>
