--- a/src/partials/catalogFurnitures.html
+++ b/src/partials/catalogFurnitures.html
@@ -1,6 +1,6 @@
 <div class="catalog__furnitures">
   <form class="catalog__form form-category" action="#" aria-label="выберите категорию мебели">
-    <h3 class="catalog__form-title">Категория</h3>
+    <h3 class="catalog__form-title catalog-subtitle">Категория</h3>
     <label class="catalog__furniture furniture" for="divans">
       <input class="furniture__sofas furniture__input" type="checkbox" id="divans" name="диваны" aria-label="диваны"
         checked><span class="furniture__span">Диваны</span>
