--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,5 +29,6 @@
 @import "./components/guarantees";
 @import "./components/contacts";
 @import "./components/catalog";
-@import "./components/furnitures";
+@import "./components/catalogFurnitures";
+@import "./components/catalogPrice";
 
