--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -16,4 +16,6 @@
 @import '../../node_modules/tippy.js/animations/scale';
 @import '../../node_modules/tippy.js/dist/tippy';
 
+@import '../../node_modules/nouislider/dist/nouislider.min';
+
 
