--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,4 +31,5 @@
 @import "./components/catalog";
 @import "./components/catalogFurnitures";
 @import "./components/catalogPrice";
+@import "./components/catalogNoUi";
 
