feat: add section discount in page catalog

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -5,6 +5,7 @@
         <h2 class="catalog__left-title">Фильтровать по:</h2>
         @include('catalogFurnitures.html')
         @include('catalogPrice.html')
+        @include('catalogDiscount.html')
       </div>
       <div class="catalog__right"></div>
     </div>
