--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,4 +32,5 @@
 @import "./components/catalogFurnitures";
 @import "./components/catalogPrice";
 @import "./components/catalogNoUi";
+@import "./components/catalogDiscount";
 
