--- a/src/scss/components/_catalogFurnitures.scss
+++ b/src/scss/components/_catalogFurnitures.scss
@@ -70,7 +70,7 @@
         height: 20px;
         border: 1px solid var(--grey-color);
         border-radius: 2px;
-        transition: border-color .3s ease-in-out;
+        transition: all .3s ease-in-out;
       }
 
       @include hover {
