feat: add  section colors in page catalog

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -6,6 +6,7 @@
         @include('catalogFurnitures.html')
         @include('catalogPrice.html')
         @include('catalogDiscount.html')
+        @include('catalogColors.html')
       </div>
       <div class="catalog__right"></div>
     </div>
