--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,4 +33,5 @@
 @import "./components/catalogPrice";
 @import "./components/catalogNoUi";
 @import "./components/catalogDiscount";
+@import "./components/catalogColors";
 
